# sandbox.margre

./: .gitignore  README.md  config.toml.example  docker-compose.yml  docker_neo4j.sh  pyproject.toml
planning/: AGENT_HARNESS_SUGGESTIONS.md  CANDIDATE_RANKING.md  DISCOVERY_PLAN.md  IMPLEMENTATION_PLAN.md  REQUIREMENTS.md  TODO.md
src/margre/: cli.py  config.py  health.py
src/margre/graph/: connection.py  repository.py  schema.py
src/margre/llm/: client.py  prompts.py
src/margre/persistence/: notes.py  runs.py
src/margre/reporting/: html.py  markdown.py  mermaid.py
src/margre/search/: __init__.py  base.py  ddgs.py  searxng.py
src/margre/workflow/: aggregator.py  candidate.py  hitl.py  orchestrator.py  planner.py  researcher.py  state.py  synthesis.py
tests/: conftest.py  test_config.py
tests/integration/: test_llm_integration.py  test_workflow.py
tests/test_reporting/: test_html.py  test_mermaid.py
tests/test_search/: test_factory.py
tests/test_workflow/: test_candidate.py  test_planner.py
