[project]
name = "sandbox-margre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.11.4",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "neo4j>=6.1.0",
    "openai>=2.29.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
margre = "margre.cli:app"
